--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,14 @@
+ltb-project-self-service-password (1.4.2-1) unstable; urgency=low
+
+    * gh#504: Cannot use docker get gregwar/captcha----use docker
+    * gh#505: fix(captcha): missing gd library
+    * gh#506: I have a little problem - I can't use SMS for the next step
+    * gh#507: fix(reset)
+    * gh#508: fix(undefined)
+    * gh#511: Bump phpmailer/phpmailer from 6.3.0 to 6.4.1 in /lib
+
+ -- Clement Oudot <clem@ltb-project.org>  Tue, 04 May 2021 12:00:00 +0200
+
 ltb-project-self-service-password (1.4.1-1) unstable; urgency=low
 
     * gh#501: Remove extra semicolon from setquestions template
