--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,13 @@
+ltb-project-self-service-password (1.4.3-1) unstable; urgency=high
+
+    * gh#516: Docker image does not have sendmail in it
+    * gh#517: fix(mail): add sendmail to Docker image
+    * gh#520: [Security:high] Reset by SMS can be used to change any account password
+    * gh#521: If token was provided by SMS, check initial SMS code before changing password
+    * gh#522: [Security:low] Dismiss captcha once it is used
+
+ -- Clement Oudot <clem@ltb-project.org>  Wed, 12 May 2021 12:00:00 +0200
+
 ltb-project-self-service-password (1.4.2-1) unstable; urgency=low
 
     * gh#504: Cannot use docker get gregwar/captcha----use docker
