--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,30 @@
+ltb-project-self-service-password (1.4.5-1) unstable; urgency=high
+
+    * Latest version of 1.4.4 not working by @Max7641 in #670
+
+ -- Clement Oudot <clem@ltb-project.org>  Wed, 29 Jun 2022 12:00:00 +0200
+
+ltb-project-self-service-password (1.4.4-1) unstable; urgency=high
+
+    * Update bootstrap to v3.4.1 by @bohze in #663
+    * Separate Smarty debug and debug by @coudot in #666
+    * Typo in resetbytoken resulting in mails not being sent by @faust64 in #529
+    * Don't send notification if modification failed by @faust64 in #542
+    * PHP Fatal error: Uncaught TypeError: ldap_get_dn() in #648
+    * REST files are not shipped in packages in #660
+
+ -- Clement Oudot <clem@ltb-project.org>  Fri, 24 Jun 2022 12:00:00 +0200
+
+ltb-project-self-service-password (1.4.3-1) unstable; urgency=high
+
+    * gh#516: Docker image does not have sendmail in it
+    * gh#517: fix(mail): add sendmail to Docker image
+    * gh#520: [Security:high] Reset by SMS can be used to change any account password
+    * gh#521: If token was provided by SMS, check initial SMS code before changing password
+    * gh#522: [Security:low] Dismiss captcha once it is used
+
+ -- Clement Oudot <clem@ltb-project.org>  Wed, 12 May 2021 12:00:00 +0200
+
 ltb-project-self-service-password (1.4.2-1) unstable; urgency=low
 
     * gh#504: Cannot use docker get gregwar/captcha----use docker
