--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,13 @@
+ltb-project-self-service-password (1.5.2-1) unstable; urgency=high
+
+    * gh#717: Update config_nginx.rst
+    * gh#718: Update config_apache.rst
+    * gh#720: SMS code won't send when captcha is enabled
+    * gh#721: captcha in sendsms check when needed only
+    * gh#722: Use gpg instead of apt-key during for deb install
+
+ -- Clement Oudot <clem@ltb-project.org>  Thu, 06 Oct 2022 12:00:00 +0200
+
 ltb-project-self-service-password (1.5.1-1) unstable; urgency=high
 
     * gh#709: Error 404 with bootstrap.min.css.map
