--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+ltb-project-self-service-password (1.7.1-1) unstable; urgency=high
+
+    * gh#997 Replace lib detectbrowserlanguage in REST file
+
+ -- Clement Oudot <clem@ltb-project.org>  Tue, 29 Oct 2024 12:00:00 +0200
+
 ltb-project-self-service-password (1.7.0-1) unstable; urgency=high
 
     * gh#943 Remove duplicate detectLanguage code
